crates/core/tests/snapshots/container_type_test__partial_type__unnamed_enum__supports_tagged.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.impl_partial_type())
---
#[derive(Clone, Debug, PartialEq, serde::Deserialize, serde::Serialize)]
#[serde(tag = "type", content = "value")]
enum PartialExample {
    A(bool),
    B(usize),
}
