crates/core/tests/snapshots/container_type_test__partial_type__unnamed_enum__supports_untagged.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.impl_partial_type())
---
#[derive(Clone, Debug, PartialEq, serde::Serialize)]
#[serde(untagged)]
enum PartialExample {
    A(bool),
    B(usize),
}
